cluster/apps/monitoring/goldilocks/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: goldilocks
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`goldilocks.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: goldilocks-dashboard
          port: 80
          scheme: http
      middlewares:
        - name: traefik-forward-auth
          namespace: networking
  tls:
    secretName: "goldilocks-${SECRET_DOMAIN/./-}-tls"
